# AssemblySimulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  assembly.cpp  assembly.h  codeedit.cpp  codeedit.h  codeeditlinenumberarea.cpp  codeeditlinenumberarea.h  disassemblerdialog.cpp  disassemblerdialog.h  disassemblerdialog.ui  examples.qrc  helpbrowser.cpp  helpbrowser.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  memorybrowserwidget.cpp  memorybrowserwidget.h  memorybrowserwidget.ui  memoryeditdialog.cpp  memoryeditdialog.h  memoryeditdialog.ui  statemanager.cpp  statemanager.h  utils.h
assemblies/amd64/: amd64assembly.cpp  amd64assembly.h  amd64states.h  amd64states.ui  amd64syntaxhighlighter.cpp
docs/: CMakeLists.txt  docs.qch  docs.qhcp  docs.qhp  index.html  style.css
examples/: 1.asm
libs/Assemblies/AMD64/: AMD64.json  CMakeLists.txt  amd64assembly.cpp  amd64assembly.h  amd64assemblyplugin.cpp  amd64assemblyplugin.h  amd64syntaxhighlighter.cpp  amd64syntaxhighlighter.h
libs/LibAssembly/: CMakeLists.txt  LibAssembly_global.h  assembly.h  libassembly.cpp  libassembly.h  memory.cpp  memory.h  statemanager.cpp  statemanager.h
libs/LibParse/: CMakeLists.txt  libparse.cpp  libparse.h
states/: amd64states.cpp  amd64states.ui
